# word-impostor

./: .gitignore  README.md  pyproject.toml
word_imposter/: main.py
word_impostor/: main.py
word_impostor/api/: __init__.py  data.py  main.py  rooms.py  websocket.py
word_impostor/blueprints/: __init__.py
word_impostor/blueprints/rooms/: __init__.py  rooms.py
word_impostor/blueprints/rooms/templates/: create_room.html  game_session.html  generate_room.html  list_rooms.html  play.html  set_username.html
word_impostor/templates/: index.html
