[tool.poetry]
name = "word-impostor"
version = "0.1.0"
description = "Look at 4 photos or 4 words and find the one that doesn't belong in the group."
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
coolname = "^2.2.0"
flask-restful = "^0.3.10"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
